--- a/app/css/embla.css
+++ b/app/css/embla.css
@@ -23,16 +23,43 @@
   padding-left: var(--slide-spacing);
 }
 
-.embla__slide__number {
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  border-radius: 1.8rem;
-  font-size: 4rem;
-  font-weight: 600;
+.embla__slide__content {
+  position: relative;
+  background-color: transparent; /* Enlever la couleur de fond */
+  color: var(--background);
+  padding: 0;
+  border-radius: 10px; /* Ajouter un bord arrondi */
+  border: 2px solid var(--secondary); /* Ajouter une bordure pour différencier les cases */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  height: var(--slide-height);
-  user-select: none;
+  height: var(--slide-height); /* Assurez-vous que le contenu prend toute la hauteur */
+  overflow: hidden; /* Empêche le débordement de l'image */
+
+}
+
+.embla__slide__info {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 10px;
+  text-align: center;
+  margin-top: auto; /* Pousse le contenu vers le bas */
+
+}
+
+.embla__slide__title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  
+}
+
+.embla__slide__description {
+  font-size: 1rem;
 }
 
 .embla__controls {
@@ -42,6 +69,7 @@
   gap: 1.2rem;
   margin-top: 1.8rem;
 }
+
 
 .embla__buttons {
   display: grid;
@@ -91,7 +119,7 @@
 }
 
 .embla__dot {
-  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
+  -webkit-tap-highlight-color: white;
   -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
@@ -102,24 +130,20 @@
   border: 0;
   padding: 0;
   margin: 0;
-  width: 2.6rem;
-  height: 2.6rem;
+  width: 1.4rem; /* Réduire la taille pour mieux voir les dots */
+  height: 1.4rem; /* Réduire la taille pour mieux voir les dots */
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  border: 1px solid var(--detail-medium-contrast); /* Ajouter une bordure pour la visibilité */
 }
 
 .embla__dot:after {
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 1.4rem;
-  height: 1.4rem;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
   content: '';
+  width: 0.8rem; /* Réduire la taille pour mieux voir les dots */
+  height: 0.8rem; /* Réduire la taille pour mieux voir les dots */
+  border-radius: 50%;
+  background-color: white; /* Couleur des dots */
 }
 
-.embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.2rem var(--text-body);
-}
